--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6",
     "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
     "zod": "https://esm.sh/zod@3.22.4",
-    "react-hook-form": "https://esm.sh/react-hook-form@7.51.0",
-    "@hookform/resolvers/zod": "https://esm.sh/@hookform/resolvers@3.3.4/zod",
-    "@tanstack/react-query": "https://esm.sh/@tanstack/react-query@5.28.4",
+    "react-hook-form": "https://esm.sh/react-hook-form@7.51.0?external=react,react-dom",
+    "@hookform/resolvers/zod": "https://esm.sh/@hookform/resolvers@3.3.4/zod?external=react,react-dom",
+    "@tanstack/react-query": "https://esm.sh/@tanstack/react-query@5.28.4?external=react,react-dom",
     "@hookform/resolvers/": "https://aistudiocdn.com/@hookform/resolvers@^5.2.2/"
   }
 }
