--- a/index.html
+++ b/index.html
@@ -5,31 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payroll Management System</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <script>
       tailwind.config = {
         theme: {
           extend: {
             fontFamily: {
-              sans: ['Inter', 'sans-serif'],
+              sans: ["Inter", "sans-serif"],
             },
             colors: {
               primary: {
-                50: '#FFFDEE',
-                200: '#E2FBCE',
-                500: '#076653',
-                800: '#0C342C',
-                900: '#06231D',
+                50: "#FFFDEE",
+                200: "#E2FBCE",
+                500: "#076653",
+                800: "#0C342C",
+                900: "#06231D",
               },
               secondary: {
-                400: '#E3EF26',
-              }
-            }
-          }
-        }
-      }
+                400: "#E3EF26",
+              },
+            },
+          },
+        },
+      };
     </script>
     <style>
       /* Custom scrollbar for webkit */
@@ -38,39 +41,40 @@
         height: 8px;
       }
       ::-webkit-scrollbar-track {
-        background: #f1f1f1; 
+        background: #f1f1f1;
       }
       ::-webkit-scrollbar-thumb {
-        background: #ccc; 
+        background: #ccc;
         border-radius: 4px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #076653; 
+        background: #076653;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6",
-    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
-    "zod": "https://esm.sh/zod@3.22.4",
-    "react-hook-form": "https://esm.sh/react-hook-form@7.51.0?external=react,react-dom",
-    "@hookform/resolvers/zod": "https://esm.sh/@hookform/resolvers@3.3.4/zod?external=react,react-dom",
-    "@tanstack/react-query": "https://esm.sh/@tanstack/react-query@5.28.4?external=react,react-dom",
-    "@hookform/resolvers/": "https://aistudiocdn.com/@hookform/resolvers@^5.2.2/",
-    "jspdf": "https://esm.sh/jspdf@2.5.1",
-    "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.8.2",
-    "xlsx": "https://esm.sh/xlsx@0.18.5"
-  }
-}
-</script>
-</head>
+    <script type="importmap">
+      {
+        "imports": {
+          "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+          "react/": "https://aistudiocdn.com/react@^19.2.0/",
+          "react": "https://aistudiocdn.com/react@^19.2.0",
+          "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
+          "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+          "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6",
+          "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
+          "zod": "https://esm.sh/zod@3.22.4",
+          "react-hook-form": "https://esm.sh/react-hook-form@7.51.0?external=react,react-dom",
+          "@hookform/resolvers/zod": "https://esm.sh/@hookform/resolvers@3.3.4/zod?external=react,react-dom",
+          "@tanstack/react-query": "https://esm.sh/@tanstack/react-query@5.28.4?external=react,react-dom",
+          "@hookform/resolvers/": "https://aistudiocdn.com/@hookform/resolvers@^5.2.2/",
+          "jspdf": "https://esm.sh/jspdf@2.5.1",
+          "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.8.2",
+          "xlsx": "https://esm.sh/xlsx@0.18.5"
+        }
+      }
+    </script>
+  </head>
   <body class="bg-gray-50 text-gray-900 antialiased">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
